# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added knx-gateway-discover and knx-gateway-info scripts for gathering
  information from multicast and unicast KNX gateways, which connect home
  automation systems to IP networks. [Niklaus Schiess, Dominik Schneider]

o Disable TPACKET_V3 in our included libpcap. This version of the Linux kernel
  packet ring API has problems that result in lots of lost packets. This patch
  falls back to TPACKET_V2 or earlier versions if available. [nnposter]

o Output a warning when deprecated options are used, and suggest the preferred
  option. Currently deprecated: -i -o -m -sP -P0 -PN -oM -sR. The warning is
  only visible with -v. [Daniel Miller]

o [NSE] Added script http-ls. Parses web server directory index pages with
  optional recursion. [Pierre Lalet]

o [NSE] [GH#106] Added a new NSE module, ls.lua, for accumulating and
  outputting file and directory listings. The afp-ls, nfs-ls, and smb-ls
  scripts have been converted to use this module. [Pierre Lalet]

o Fix Nmap's DTD, which did not recognize that the script element could contain
  character data when a script returns a number or a boolean.
  [Jonathan Daugherty]

o [GH#75] Normalize check targets to standard format check-*.
  [Gioacchino Mazzurco]

o [GH#75] Normalize clean and distclean targets to standard format clean-* and
  distclean-*. [Gioacchino Mazzurco]

o [GH#75] Normalize build targets to standard format build-*.
  [Gioacchino Mazzurco]

o [NSE] Added script xmlrpc-methods. This script perfoms introspection of
  xmlrpc services and lists methods and their description. [Gyanendra Mishra]

o [NSE] Removed http-email-harvest as the the new http-grep does email address
  scraping by default. [Gyanendra Mishra]

o [NSE] Added script http-fetch. This script can be used to fetch all files
  from the target, specific files from the target or files that match a  given
  pattern. [Gyanendra Mishra]
